--- a/picnic-assignment/pyproject.toml
+++ b/picnic-assignment/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
 test = [
     "build == 0.7.0",
     "pytest == 7.1.2",
-    "pytest-cov == 3.0.0"
+    "pytest-cov == 3.0.0",
+    "requests-mock == 1.11.0"
 ]
 
 [project.scripts]
